tests/sources/invalid/classes/class_errors.fire
// Class error tests - comprehensive

// Undefined class
fn use_undefined_class() -> void {
    UndefinedClass obj;  //~ ERROR FS-PARSE-0010 @5
//~^ ERROR FS-PARSE-0010 @20
}

// Accessing undefined field
class Point {
    x: int32;
    y: int32;
}

fn undefined_field() -> void {
    p: Point;  //~ ERROR FS-PARSE-0010 @13
    z: int32 = p.z;  // Field 'z' doesn't exist  //~ ERROR FS-PARSE-0003 @16
}

// Field type mismatch
fn field_type_mismatch() -> void {
    p: Point;  //~ ERROR FS-PARSE-0010 @13
    p.x = "string";  // x is int32, not string  //~ ERROR FS-PARSE-0003 @5
}

// Calling undefined method
fn undefined_method() -> void {
    p: Point;  //~ ERROR FS-PARSE-0010 @13
    p.move(5, 10);  // Point has no 'move' method  //~ ERROR FS-PARSE-0003 @5
}

// Accessing private field (if privacy is implemented)
class Private {
    secret: int32;
}

// Duplicate class definition
class DuplicateClass {
    x: int32;
}

class DuplicateClass {  // Duplicate
    y: int32;
}

// Duplicate field in class
class DuplicateField {
    x: int32;
    x: int32;  // Duplicate field name
}

// Using class name as variable
fn class_as_var() -> void {
    Point: int32 = 5;  // Point is already a class name
}

// Missing required initialization
class MustInit {
    required: int32;
}

fn missing_init() -> void {
    obj: MustInit;  // May need initialization  //~ ERROR FS-PARSE-0010 @18
    println(obj.required);  //~ ERROR FS-PARSE-0012 @5
}
